fix some validation errors

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="resource-type" content="document"/>
     <meta name="language" content="en-us"/>
     <meta name="copyright" content="2015 Ross Hettel"/>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+    <script type="application/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     <link rel="stylesheet" type="text/css" href="macos/macos.css"/>
     <link rel="stylesheet" type="text/css" href="custom.css"/>
     <title>Ross Hettel</title>
@@ -35,7 +35,6 @@
             <a href="http://www.rosshettel.com">rosshettel</a>
         </h1>
     </div>
-    <hr>
 
     <div id="content" class="narrowcolumn">
         <div class="post type-post status-publish format-standard hentry">
@@ -56,7 +55,7 @@
 
                     <div>
                         <a href="http://www.placegoat.com">PlaceGoat</a>
-                        <p>Placeholder image service full of goats <br>
+                        <p>Placeholder image service full of goats <br/>
                            Built with Node.js, hosted on Heroku, and uses Twitter as a DB</p>
                     </div>
 
