added ngweatherstation info

--- a/index.html
+++ b/index.html
@@ -55,8 +55,14 @@
 
                     <div>
                         <a href="http://www.placegoat.com">PlaceGoat</a>
-                        <p>Placeholder image service full of goats <br/>
-                           Built with Node.js, hosted on Heroku, and uses Twitter as a DB</p>
+                        <p>Placeholder image service full of goats</p>
+                        <p>Built with Node.js, hosted on Heroku, and uses Twitter as a DB</p>
+                    </div>
+
+                    <div>
+                        <a href="http://rosshettel.github.io/ngWeatherStation">ngWeatherStation</a>
+                        <p>A small weather and webcam display for an IBM 4707 monitor I rescued</p>
+                        <p>Built with Angular and <a href="http://forecast.io">forecast.io</a></p>
                     </div>
 
                     <div>
