added noun project

--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
                     <h3>Fun Side Projects</h3>
 
                     <div>
+                        <a href="https://www.npmjs.com/package/the-noun-project">the-noun-project</a>
+                        <p>API library for accessing <a href="https://thenounproject.com/">The Noun Project</a></p>
+                        <p>Built with Node.js and submitted to npm</p>
+                    </div>
+
+                    <div>
                         <a href="http://www.placegoat.com">PlaceGoat</a>
                         <p>Placeholder image service full of goats</p>
                         <p>Built with Node.js, hosted on Heroku, and uses Twitter as a DB</p>
@@ -154,4 +160,3 @@
 </div>
 </body>
 </html>
-
