add spoiled.io and updated job history

--- a/index.html
+++ b/index.html
@@ -54,6 +54,19 @@
                     <h3>Fun Side Projects</h3>
 
                     <div>
+                        <a href="https://spoiled.io">Spoiled.io - Game of Thrones spoilers as a service</a>
+                        <p>Built with Node.js and the Twilio API, scaled from 54 to 1700+ users</p>
+                        <p>Written about in
+                            <a href="http://www.wsj.com/articles/spoiler-alert-this-article-about-spoilers-is-full-of-spoilers-1467672881">The Wall Street Journal</a>,
+                            <a href="https://www.theguardian.com/tv-and-radio/2016/jun/23/game-of-thrones-the-evil-app-that-sends-spoilers-to-your-enemies">The Guardian</a>,
+                            <br/>
+                            <a href="http://www.businessinsider.com/game-of-thrones-spoiler-texts-automatically-2016-6">Business Insider</a>,
+                            <a href="http://www.avclub.com/article/finally-app-sends-game-thrones-spoilers-your-enemi-238622">The AV Club</a>, and
+                            <a href="https://www.producthunt.com/tech/spoiled">Product Hunt</a>
+                        </p>
+                    </div>
+
+                    <div>
                         <a href="https://www.npmjs.com/package/the-noun-project">the-noun-project</a>
                         <p>API library for accessing <a href="https://thenounproject.com/">The Noun Project</a></p>
                         <p>Built with Node.js and submitted to npm</p>
@@ -82,10 +95,17 @@
                     <h3>Job History</h3>
 
                     <div>
-                        <h4>HighGround</h4>
-                        <span>March 2014 - Present</span>
+                        <h4>Hologram</h4>
+                        <span>May 2016 - Present</span>
                         <p>Software Engineer</p>
-                        <p>Working with Node.js, Angular.js, and MongoDB</p>
+                        <p>Working with PHP and Python and C++/Arduino libraries</p>
+                    </div>
+
+                    <div>
+                        <h4>HighGround</h4>
+                        <span>March 2014 - May 2016</span>
+                        <p>Software Engineer</p>
+                        <p>Worked with Node.js, Angular.js, and MongoDB</p>
                     </div>
 
                     <div>
@@ -105,8 +125,9 @@
 
                 <div>
                     <h3>Contact</h3>
-                    <span>rosshettel [at] gmail [dot] com</span><br/>
-                    <span>ross [at] rosshettel [dot] com</span>
+                    <span>ross [at] het [dot] tel</span>
+                    <br/>
+                    <span>rosshettel [at] gmail [dot] com</span>
                 </div>
             </div>
         </div>
