--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     <div>
                         <a href="http://www.placegoat.com">PlaceGoat</a>
                         <p>Placeholder image service full of goats</p>
-                        <p>Built with Node.js, hosted on Heroku, and uses Twitter as a DB</p>
+                        <p>Built with Node.js, and uses Twitter as a crude "database"</p>
                     </div>
 
                     <div>
