--- a/index.html
+++ b/index.html
@@ -95,10 +95,17 @@
                     <h3>Job History</h3>
 
                     <div>
+                        <h4>Acorns</h4>
+                        <span>July 2018 - Present</span>
+                        <p>Senior Software Engineer</p>
+                    </div>
+
+
+                    <div>
                         <h4>Hologram</h4>
-                        <span>May 2016 - Present</span>
+                        <span>May 2016 - April 2018</span>
                         <p>Software Engineer</p>
-                        <p>Working with PHP and Python and C++/Arduino libraries</p>
+                        <p>Worked with PHP and Python and C++/Arduino libraries</p>
                     </div>
 
                     <div>
