--- a/index.html
+++ b/index.html
@@ -44,9 +44,47 @@
                 <div>
                     <h1>Ross Hettel</h1>
                     <div style="font-size: 14px;">
-                        <p>Bachelors in Computer Science</p>
-                        <p>Northern Illinois University</p>
-                        <p>Class of 2012</p>
+                        <p>Senior Backend Software Engineer</p>
+                        <p>Bachelors in Computer Science - NIU, Class of 2012</p>
+                    </div>
+                </div>
+
+                <div class="jobhistory">
+                    <h3>Job History</h3>
+
+                    <div>
+                        <h4>Acorns</h4>
+                        <span>July 2018 - Present</span>
+                        <p>Senior Software Engineer</p>
+                        <p>Working with Ruby on Rails systems at scale and PostgreSQL</p>
+                    </div>
+
+                    <div>
+                        <h4>Hologram</h4>
+                        <span>May 2016 - April 2018</span>
+                        <p>Software Engineer</p>
+                        <p>Worked with PHP and Python and C++/Arduino libraries</p>
+                    </div>
+
+                    <div>
+                        <h4>HighGround</h4>
+                        <span>March 2014 - May 2016</span>
+                        <p>Software Engineer</p>
+                        <p>Worked with Node.js, Angular.js, and MongoDB</p>
+                    </div>
+
+                    <div>
+                        <h4>edo Interactive</h4>
+                        <span>April 2013 - March 2014</span>
+                        <p>Software Engineer</p>
+                        <p>Worked with Java, d3.js, and PostgreSQL</p>
+                    </div>
+
+                    <div>
+                        <h4>Lighthouse Catholic Media</h4>
+                        <span>January 2011 - April 2013</span>
+                        <p>Software Engineer</p>
+                        <p>Worked with PHP and Symfony, jQuery, and MySQL</p>
                     </div>
                 </div>
 
@@ -90,46 +128,6 @@
                     </div>
                 </div>
 
-
-                <div class="jobhistory">
-                    <h3>Job History</h3>
-
-                    <div>
-                        <h4>Acorns</h4>
-                        <span>July 2018 - Present</span>
-                        <p>Senior Software Engineer</p>
-                    </div>
-
-
-                    <div>
-                        <h4>Hologram</h4>
-                        <span>May 2016 - April 2018</span>
-                        <p>Software Engineer</p>
-                        <p>Worked with PHP and Python and C++/Arduino libraries</p>
-                    </div>
-
-                    <div>
-                        <h4>HighGround</h4>
-                        <span>March 2014 - May 2016</span>
-                        <p>Software Engineer</p>
-                        <p>Worked with Node.js, Angular.js, and MongoDB</p>
-                    </div>
-
-                    <div>
-                        <h4>edo Interactive</h4>
-                        <span>April 2013 - March 2014</span>
-                        <p>Software Engineer</p>
-                        <p>Worked with Java, d3.js, and PostgresSQL</p>
-                    </div>
-
-                    <div>
-                        <h4>Lighthouse Catholic Media</h4>
-                        <span>January 2011 - April 2013</span>
-                        <p>Software Engineer</p>
-                        <p>Worked with PHP and Symfony, jQuery, and MySQL</p>
-                    </div>
-                </div>
-
                 <div>
                     <h3>Contact</h3>
                     <span>ross [at] het [dot] tel</span>
@@ -141,16 +139,11 @@
     </div>
     <div id="sidebar">
         <ul>
-            <li class="home_icon"><a href="http://www.rosshettel.com" title="Home">rosshettel</a></li>
+            <li class="home_icon"><a href="#" title="Home">rosshettel</a></li>
             <li class="archive_item"><a href="https://github.com/rosshettel" title="GitHub">GitHub</a></li>
-            <li class="archive_item"><a href="http://www.linkedin.com/pub/ross-hettel/30/990/418" title="LinkedIn">LinkedIn</a>
-            </li>
+            <li class="archive_item"><a href="http://www.linkedin.com/pub/ross-hettel/30/990/418" title="LinkedIn">LinkedIn</a></li>
             <li class="archive_item"><a href="https://twitter.com/rosshettel" title="Twitter">Twitter</a></li>
             <li class="archive_item"><a href="http://instagram.com/rosshettel" title="Instagram">Instagram</a></li>
-            <li class="page_item">
-                <a href="http://northernstar.info/search/?q=ross+hettel&t=article&l=10&d=&d1=&d2=&s=start_time&sd=desc&f=html#.TstHukgk6dA"
-                   target="_blank" title="My Articles at the Northern Star">Northern Star Articles</a>
-            </li>
         </ul>
     </div>
 
