--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
                     <div>
                         <h4>Acorns</h4>
-                        <span>July 2018 - Present</span>
+                        <span>July 2018 - June 2020</span>
                         <p>Senior Software Engineer</p>
-                        <p>Working with Ruby on Rails systems at scale and PostgreSQL</p>
+                        <p>Working with Ruby on Rails, GraphQL, and PostgreSQL at scale</p>
                     </div>
 
                     <div>
@@ -93,7 +93,7 @@
 
                     <div>
                         <a href="https://spoiled.io">Spoiled.io - Game of Thrones spoilers as a service</a>
-                        <p>Built with Node.js and the Twilio API, scaled from 54 to 1700+ users</p>
+                        <p>Built with Node.js, rebuilt with Ruby on Rails, and the Twilio API, scaled thousands of users</p>
                         <p>Written about in
                             <a href="http://www.wsj.com/articles/spoiler-alert-this-article-about-spoilers-is-full-of-spoilers-1467672881">The Wall Street Journal</a>,
                             <a href="https://www.theguardian.com/tv-and-radio/2016/jun/23/game-of-thrones-the-evil-app-that-sends-spoilers-to-your-enemies">The Guardian</a>,
